Sun Nov 20 19:16:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Skeleton_Inheritance/skel_inheritance.mpc:
          Fixed windows link errors

Thu Nov 17 17:15:35 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * bin/tao_other_tests.lst:

          Added orbsvcs/tests/Security/MT_BiDir_SSL test.

Thu Nov 17 11:30:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ForwardUponObjectNotExist/client.cpp:
          First shutdown the ORB before destroying it

Thu Nov 17 10:05:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Nov 17 07:35:20 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * performance-tests/Latency/DSI/Roundtrip.h:
                * performance-tests/Sequence_Latency/DSI/Roundtrip.h:
                * tests/DSI_AMI_Gateway/test_dsi.h:
                  Last runtime fixes

        Wed Nov 16 07:26:18 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * orbsvcs/orbsvcs/CosEvent/CEC_DynamicImplementation.h:
                * orbsvcs/orbsvcs/CosEvent/CEC_TypedProxyPushConsumer.h:
                  Doxygen changes

        Wed Nov 16 07:18:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * orbsvcs/performance-tests/LoadBalancing/LBPerf/CPU/Roundtrip.h:
                * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Roundtrip.h:
                * orbsvcs/performance-tests/RTEvent/RTCORBA_Baseline/Roundtrip.h:
                * orbsvcs/tests/Bug_2285_Regression/Hello.h:
                * orbsvcs/tests/Bug_2287_Regression/Hello.h:
                * orbsvcs/tests/Bug_2615_Regression/Hello.h:
                * orbsvcs/tests/Bug_2800_Regression/Hello.h:
                * orbsvcs/tests/Bug_2800_Regression/NsShutdown.h:
                * orbsvcs/tests/Bug_3215_Regression/Hello.h:
                * orbsvcs/tests/Bug_3216_Regression/Hello.h: