@@ -59,7 +59,7 @@ namespace TAO
   namespace Portable_Server
   {
     class Servant_Upcall;
-  };
+  }
 
   /**
    * @class ServerRequestInterceptor_Adapter
